--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 <br />
 <img src="https://octodex.github.com/images/jetpacktocat.png" >
 <br />
-<a href="https://github.com/listpau/pendulum/gh-pages/pendularm1.html">
+<a href="https://github.com/listpau/pendulum/gh-pages/pendularm1.html">Test link to demo</a>
