--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
+<!DOCTYPE html>
+<html>
+<body>
+
 <h1> Test h1 html</h1>
 <br />
 <img src="https://octodex.github.com/images/jetpacktocat.png" >
 <br />
 <a href="https://github.com/listpau/pendulum/gh-pages/pendularm1.html">Test link to demo</a>
+</body>
+</html>
