--- a/pendularm1.html
+++ b/pendularm1.html
@@ -22,7 +22,9 @@
 \/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\-->
 <!DOCTYPE html>
 <html>
-
+<head>
+    <meta charset="UTF-8">
+</head>
 <body>
 
 <!-- //////////////////////////////////////////////////
