--- a/pendularm1.html
+++ b/pendularm1.html
@@ -286,7 +286,7 @@ function animate() {
         " 1 - Euler         <br>" +
         " 2 - Verlet        <br>" +
         " 3 - Velocity Verlet       <br>" +
-        " 4 - Runge-Kutte           <br>" +
+        " 4 - Runge-Kutta           <br>" +
         " a/d - Perturb             <br>" +
         " q/e - Adjust desired angle <br>" +
         " c - enable servo          <br>" +
