--- a/pendularm2.html
+++ b/pendularm2.html
@@ -23,8 +23,11 @@
 ||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/
 /||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\
 \/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\/||\-->
-
+<!DOCTYPE html>
 <html>
+<head>
+    <meta charset="UTF-8">
+</head>
 
 <body>
 
