--- a/pendularm2.html
+++ b/pendularm2.html
@@ -37,13 +37,13 @@
 
 
 <!-- threejs - https://github.com/mrdoob/three.js/ -->
-<script src="js/three.min.js"></script>
+<script src="three.min.js"></script>
 
 <!-- threejs camera controls helpers -->
-<script src="js/OrbitControls.js"></script>
+<script src="OrbitControls.js"></script>
 
 <!-- threejs keyboard input helper -->
-<script src="js/THREEx.KeyboardState.js"></script>
+<script src="THREEx.KeyboardState.js"></script>
 
 <script>
 
